mywork/force-app/main/default/objects/User_Preferences__c/fields/Comp_Search_Page_Size__c.field-meta.xml
<CustomField>
    <fullName>Comp_Search_Page_Size__c</fullName>
    <label>Comp Search Page Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>