mywork/force-app/main/default/objects/User_Preferences__c/fields/Default_Custom_Backlog_Id__c.field-meta.xml
<CustomField>
    <fullName>Default_Custom_Backlog_Id__c</fullName>
    <label>Default Custom Backlog Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>