mywork/force-app/main/default/objects/User_Preferences__c/fields/Default_Dev_Hub_Instance_Id__c.field-meta.xml
<CustomField>
    <fullName>Default_Dev_Hub_Instance_Id__c</fullName>
    <description>The id of the sightline instance record for the user&#39;s default salesforce dev hub</description>
    <label>Default Dev Hub Instance Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>