mywork/force-app/main/default/objects/User_Preferences__c/fields/Sprint_Home_Default_Backlog_ID__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Home_Default_Backlog_ID__c</fullName>
    <description>The ID of the default backlog from which to populate the sprint home backlog item list.</description>
    <inlineHelpText>The ID of the default backlog from which to populate the sprint home backlog item list.</inlineHelpText>
    <label>Sprint Home Default Backlog ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>